    exception to determine if wdiff found differences.  (Closes: #786518)
  * Store cached files in $XDG_CACHE_HOME instead of ~/.devscripts_cache.
    (Closes: #659330)
  * bts:
    + Use https to talk to bugs.debian.org
  * debuild: Recognize -jauto as a valid option. Based on a patch by Reiner
    Herrmann.  (Closes: #787276)
  * uscan: Fix Github example in man page.  (Closes: #757194)

  [ Dominique Dumont ]
  * licensecheck:
    * check file encoding and decode properly when reading file
     (Closes: #784821)
    * improve GPL LGPL extraction
    * optimize regex used to extract © info
    * check Groovy, Scala and Clojure files (Closes: #771119)
    * fixed regexp used to detect discussion about © (Closes: #723723)
    * fix BSL parser (Closes: #690375)
    * support academic free license (Closes: #534987)
    * allow © owner to mention "and others"
    * support eclipse public license (Closes: #587892)
    * handle LGPL as written by IBM (Closes: #587970)
    * handle REM style comments (Closes: #748611)

  [ Piotr Ożarowski ]
  * uscan: Use pypi.debian.net redirector instead of
    pypi.debian.org/packages/source URLs.  (Closes: #785746)

 -- Cyril Brulebois <kibi@debian.org>  Tue, 28 Apr 2015 16:58:36 +0200

devscripts (2.15.4) unstable; urgency=medium

  [ Dominique Dumont ]
  * licensecheck:
    + Handle license like GPL version 2 or 3 (which is not GPL-2+)
    + Ignore .pc directories
    + print copyrights in a non random-order

  [ Daniel Kahn Gillmor ]
  * uscan: explicitly dearmor, rather than --import upstream signing key
    (Closes: #768345)

  [ James McCoy ]
  * debsnap: When specified version or architectures aren't available, warn
    and exit with error code 2.  (Closes: #774276)
  * rmadison:
    + Display the usage to the specified fd instead of ignoring it.
    + Display the known URL aliases in the usage.
    + Display all the URLs in --help when $default_url is a comma-separated
      list.
    + Remove 404ing myon and debug URLs